Create contact functionality

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-navbar-top.html.twig
@@ -1,3 +1,8 @@
+<style>
+#user-dropdown{
+  top: 66px;
+}
+</style>
 <nav class="navbar-top">
   <div class="nav-wrapper">
     <a href="http://html.nkdev.info/_con/ui-buttons.html#" class="yay-toggle" style="width: 58px">
