--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -5,7 +5,7 @@
         <div class="title">
           <h5> Basic Information </h5>
           <div class="btn-group right">
-            <a href="#!" class="waves-effect waves-dark btn btn-small">
+            <a href="{{ path('properties_index') }}" class="waves-effect waves-dark btn btn-small">
               <i class="mdi mdi-navigation-chevron-left left"></i> Back
             </a>
             <button type="submit" id="btn-save" class="waves-effect waves-dark btn btn-small">
