--- a/src/DashboardBundle/Resources/views/Properties/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/design.html.twig
@@ -8,7 +8,7 @@
 {% endblock stylesheets_priority %}
 
 {% block breadcrumb %}
-  <li><a href="#">Properties</a></li>
+  <li><a href="{{ path('properties_index') }}">Properties</a></li>
 {% endblock breadcrumb %}
 
 {% block content %}
