Functionality import contact

--- a/src/DashboardBundle/Resources/views/ContactList/Partials/_modal-import-contact.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/Partials/_modal-import-contact.html.twig
@@ -21,7 +21,7 @@
             <p style="font-size: 16px;padding-top: 13px;">Outlook</p>
             <a href="#!" class="secondary-content"></a>
           </li>
-          <li class="collection-item avatar" data-email="contactcontact" style="max-height: 53px;padding-bottom: 27px;padding-top: 5px;cursor: pointer;">
+          <li class="collection-item avatar" data-email="constantcontact" style="max-height: 53px;padding-bottom: 27px;padding-top: 5px;cursor: pointer;">
             <img src="{{ asset('bundles/dashboard/images/contactcompany/contactcontact.png') }}" alt="" class="circle" style="border-radius: 1%;">
             <p style="font-size: 16px;padding-top: 13px;">ContactContact</p>
             <a href="#!" class="secondary-content"></a>
