--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateContacts.html.twig
@@ -147,8 +147,8 @@
                   <i class="{% if(row.entity.getIsActive()) %}green{% else %} red {% endif %} circle circle-status">
                   </i>
                   <div class="row" style="margin-top: 0px;">
-                    <div class="col m7" style="padding-bottom: 0px;"> <p style="font-size: 15px;">{{ row.entity.getCompleteName()}}</p> </div>
-                    <div class="col m5" style="padding-bottom: 0px;"> <p>{{ row.entity.email }}</p> </div>
+                    <div class="col m5" style="padding-bottom: 0px;"> <p style="font-size: 15px;">{{ row.entity.getCompleteName() | slice(0, 18)}}</p> </div>
+                    <div class="col m7" style="padding-bottom: 0px;"> <p>{{ row.entity.email | slice(0, 30) }}</p> </div>
                   </div>
                   <a href="#!" class="secondary-content secundary-content-center">
                     <i class="mdi mdi-hardware-keyboard-arrow-right arrow-switch action-arrow-switch" data-id="{{ row.entity.id }}"></i>
