--- a/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/Partials/_design-tab-information.html.twig
@@ -146,6 +146,7 @@
       </div>
       {{ form_widget(property_form.lat) }}
       {{ form_widget(property_form.lng) }}
+      {{ form_widget(property_form.map_zoom) }}
       <input type="hidden" value="{{ property_id }}" name="property_id" >
     {{ form_end(property_form) }}
   </div>
@@ -160,9 +161,12 @@
       var map_input_id = 'property_address';
       var map_input_lat_id = 'property_lat';
       var map_input_lng_id = 'property_lng';
+      var map_input_zoom_id = 'property_map_zoom';
       var show_marker = '{{ property.lat and property.lng ? 'true'}}';
       google.maps.event.addDomListener(window, 'load', initialize(lat, lng,
-              map_input_id, map_input_lat_id, map_input_lng_id, show_marker));
+              map_input_id, map_input_lat_id, map_input_lng_id, map_input_zoom_id,
+              show_marker
+      ));
     }
 
     var componentForm = {
