--- a/src/DashboardBundle/Resources/views/Flyer/design.html.twig
+++ b/src/DashboardBundle/Resources/views/Flyer/design.html.twig
@@ -33,6 +33,10 @@
      border-radius: 0px;
      margin-top: 0px;
   }
+  .flyer-btn-floating{
+    float: right;
+    margin: 10px;
+  }
 
 </style>
 <div class="row">
@@ -85,6 +89,8 @@
         {{ form_row(flyer_form.lat) }}
         {{ form_row(flyer_form.lng) }}
         {{ form_row(flyer_form.map_zoom) }}
+        {{ form_row(flyer_form.map_center_lat) }}
+        {{ form_row(flyer_form.map_center_lng) }}
         {{ form_row(flyer_form.html) }}
         {{ form_row(flyer_form.html_edit) }}
 
@@ -94,9 +100,13 @@
 </div>
 
 <!-- Modal Flyer Preview Structure -->
-<div id="flyer-preview-modal" class="modal modal-fixed-footer" style="height: 100%">
+<div id="flyer-photos-modal" class="modal modal-fixed-footer">
   <div class="modal-content">
-
+    {% for photo in photos %}
+      <a href="#" class="flyer-img-change" data-photo="{{ photo.photoId }}">
+        <img src="{{ photo.photoId | cloudinary_url({'crop':'fill', 'width':232, 'height':145, 'format':'png'}) }}" alt="">
+      </a>
+    {% endfor %}
   </div>
   <div class="modal-footer">
     <button href="#!" id="stripe-modal-cancel" class="modal-action modal-close waves-effect waves-red btn-flat ">Close</button>
@@ -174,26 +184,22 @@
 
     function setMap(){
       if ($('[data-element="map"]').length != 0) {
-        var lat = {{ flyer.lat ? flyer.lat : '25.7823072' }};
-        var lng = {{ flyer.lng ? flyer.lng : '-80.3011208' }};
-        var zoom = {{ flyer.mapZoom ? flyer.mapZoom : '12' }};
-        var map_input_id = 'flyer_address';
-        var map_input_lat_id = 'flyer_lat';
-        var map_input_lng_id = 'flyer_lng';
-        var map_input_zoom_id = 'flyer_map_zoom';
-        var show_marker = '{{ flyer.lat and flyer.lng ? 'true'}}';
-        google.maps.event.addDomListener(window, 'load', initialize(
-                lat,
-                lng,
-                zoom,
-                map_input_id,
-                map_input_lat_id,
-                map_input_lng_id,
-                map_input_zoom_id,
-                show_marker
-        ));
+        var mapParams = {
+          lat: {{ flyer.lat}},
+          lng: {{ flyer.lng}},
+          center_lat: {{ flyer.mapCenterLat }},
+          center_lng: {{ flyer.mapCenterLng }},
+          zoom: {{ flyer.mapZoom }},
+          map_input_id: 'flyer_address',
+          map_input_lat_id: 'flyer_lat',
+          map_input_lng_id: 'flyer_lng',
+          map_input_zoom_id: 'flyer_map_zoom',
+          map_input_center_lat_id: 'flyer_map_center_lat',
+          map_input_center_lng_id: 'flyer_map_center_lng',
+          show_marker: '{{ flyer.lat and flyer.lng ? 'true'}}'
+        };
+        google.maps.event.addDomListener(window, 'load', initialize(mapParams));
       }
-
     }
 
     function generateFlyerHtml(html_flyer){
@@ -242,6 +248,42 @@
         }
       });
       {# End #}
+    }
+
+    function placeEditButtons(){
+      $('[data-element="image_crop"]').each(function(index, value){
+        var element = $(value);
+        var btnEdit = $('<a class="btn-floating flyer-btn-floating btn-small"><i class="large mdi-editor-mode-edit"></i></a>')
+        btnEdit.click(function(){
+          $('.flyer-img-change').unbind('click');
+          $('.flyer-img-change').click(function(e){
+            e.preventDefault();
+
+            var paramsImg = {
+              photoId: $(this).data('photo'),
+              width: element.find('.cropit-image-preview').css('width').replace(/\D/g,''),
+              height: element.find('.cropit-image-preview').css('height').replace(/\D/g,''),
+              crop: 'mfit',
+              format: 'png'
+            };
+
+            getServerImage(paramsImg, function(imgCloud){
+              element.cropit('imageSrc', imgCloud);
+              element.find('.cropit-image-preview').css('background-image', "url(" + imgCloud + ")");
+              element.find('img[data-id]').attr('src', imgCloud);
+              $('#flyer-photos-modal').closeModal();
+            })
+          });
+          $('#flyer-photos-modal').openModal();
+        });
+        element.prepend(btnEdit);
+      })
+    }
+
+    function getServerImage(params, callback){
+      $.get('{{ path('flyer_image_base64') }}', params, function(data){
+        callback(data.img);
+      })
     }
 
     function bindChangeFlyerTexts(){
@@ -294,6 +336,7 @@
 
       setImagesForCrop();
       setMap();
+      placeEditButtons();
 
       $('#btn-save').click(function(e) {
         e.preventDefault();
